--- a/temalar/basit/index.html
+++ b/temalar/basit/index.html
@@ -3,7 +3,7 @@ layout: tema-basit_home
 title: Deveb Basit Tema
 ---
 <div data-gnl="1 1p" data-ort="3 3p">
-  <div data-gnl="1" data-ort="1">
+  <div data-gnl="1 ortada" data-ort="1">
   <div data-kart="haber">
   <img src="https://placehold.it/100x100" alt="resim">
   <h1>Burası Bir Başlık</h1>
