--- a/temalar/basit/index.html
+++ b/temalar/basit/index.html
@@ -9,82 +9,82 @@ title: Deveb Basit Tema
   <h1>Burası Bir Başlık</h1>
   </div>
   </div>
-  <div data-gnl="1" data-ort="1">
+  <div data-gnl="1 ortada" data-ort="1">
   <div data-kart="haber">
   <img src="https://placehold.it/100x100" alt="resim">
   <h1>Burası Bir Başlık</h1>
   </div>
-  </div>  <div data-gnl="1" data-ort="1">
+  </div>  <div data-gnl="1 ortada" data-ort="1">
   <div data-kart="haber">
   <img src="https://placehold.it/100x100" alt="resim">
   <h1>Burası Bir Başlık</h1>
   </div>
-  </div>  <div data-gnl="1" data-ort="1">
+  </div>  <div data-gnl="1 ortada" data-ort="1">
   <div data-kart="haber">
   <img src="https://placehold.it/100x100" alt="resim">
   <h1>Burası Bir Başlık</h1>
   </div>
-  </div>  <div data-gnl="1" data-ort="1">
+  </div>  <div data-gnl="1 ortada" data-ort="1">
   <div data-kart="haber">
   <img src="https://placehold.it/100x100" alt="resim">
   <h1>Burası Bir Başlık</h1>
   </div>
-  </div>  <div data-gnl="1" data-ort="1">
+  </div>  <div data-gnl="1 ortada" data-ort="1">
   <div data-kart="haber">
   <img src="https://placehold.it/100x100" alt="resim">
   <h1>Burası Bir Başlık</h1>
   </div>
-  </div>  <div data-gnl="1" data-ort="1">
+  </div>  <div data-gnl="1 ortada" data-ort="1">
   <div data-kart="haber">
   <img src="https://placehold.it/100x100" alt="resim">
   <h1>Burası Bir Başlık</h1>
   </div>
-  </div>  <div data-gnl="1" data-ort="1">
+  </div>  <div data-gnl="1 ortada" data-ort="1">
   <div data-kart="haber">
   <img src="https://placehold.it/100x100" alt="resim">
   <h1>Burası Bir Başlık</h1>
   </div>
-  </div>  <div data-gnl="1" data-ort="1">
+  </div>  <div data-gnl="1 ortada" data-ort="1">
   <div data-kart="haber">
   <img src="https://placehold.it/100x100" alt="resim">
   <h1>Burası Bir Başlık</h1>
   </div>
-  </div>  <div data-gnl="1" data-ort="1">
+  </div>  <div data-gnl="1 ortada" data-ort="1">
   <div data-kart="haber">
   <img src="https://placehold.it/100x100" alt="resim">
   <h1>Burası Bir Başlık</h1>
   </div>
-  </div>  <div data-gnl="1" data-ort="1">
+  </div>  <div data-gnl="1 ortada" data-ort="1">
   <div data-kart="haber">
   <img src="https://placehold.it/100x100" alt="resim">
   <h1>Burası Bir Başlık</h1>
   </div>
-  </div>  <div data-gnl="1" data-ort="1">
+  </div>  <div data-gnl="1 ortada" data-ort="1">
   <div data-kart="haber">
   <img src="https://placehold.it/100x100" alt="resim">
   <h1>Burası Bir Başlık</h1>
   </div>
-  </div>  <div data-gnl="1" data-ort="1">
+  </div>  <div data-gnl="1 ortada" data-ort="1">
   <div data-kart="haber">
   <img src="https://placehold.it/100x100" alt="resim">
   <h1>Burası Bir Başlık</h1>
   </div>
-  </div>  <div data-gnl="1" data-ort="1">
+  </div>  <div data-gnl="1 ortada" data-ort="1">
   <div data-kart="haber">
   <img src="https://placehold.it/100x100" alt="resim">
   <h1>Burası Bir Başlık</h1>
   </div>
-  </div>  <div data-gnl="1" data-ort="1">
+  </div>  <div data-gnl="1 ortada" data-ort="1">
   <div data-kart="haber">
   <img src="https://placehold.it/100x100" alt="resim">
   <h1>Burası Bir Başlık</h1>
   </div>
-  </div>  <div data-gnl="1" data-ort="1">
+  </div>  <div data-gnl="1 ortada" data-ort="1">
   <div data-kart="haber">
   <img src="https://placehold.it/100x100" alt="resim">
   <h1>Burası Bir Başlık</h1>
   </div>
-  </div>  <div data-gnl="1" data-ort="1">
+  </div>  <div data-gnl="1 ortada" data-ort="1">
   <div data-kart="haber">
   <img src="https://placehold.it/100x100" alt="resim">
   <h1>Burası Bir Başlık</h1>
