--- a/temalar/basit/index.html
+++ b/temalar/basit/index.html
@@ -4,90 +4,99 @@ title: Deveb Basit Tema
 ---
 <div data-gnl="1 1p" data-ort="3 3p">
   <div data-gnl="1 ortada" data-ort="1">
-  <div data-kart="haber">
-  <img src="https://placehold.it/300x300" alt="resim">
-  <h1>Burası Bir Başlık</h1>
-  </div>
+    <div data-kart="haber">
+      <img src="https://placehold.it/300x300" alt="resim">
+      <h1>Burası Bir Başlık</h1>
+    </div>
   </div>
   <div data-gnl="1 ortada" data-ort="1">
-  <div data-kart="haber">
-  <img src="https://placehold.it/300x300" alt="resim">
-  <h1>Burası Bir Başlık</h1>
+    <div data-kart="haber">
+      <img src="https://placehold.it/300x300" alt="resim">
+      <h1>Burası Bir Başlık</h1>
+    </div>
   </div>
-  </div>  <div data-gnl="1 ortada" data-ort="1">
-  <div data-kart="haber">
-  <img src="https://placehold.it/300x300" alt="resim">
-  <h1>Burası Bir Başlık</h1>
+  <div data-gnl="1 ortada" data-ort="1">
+    <div data-kart="haber">
+      <img src="https://placehold.it/300x300" alt="resim">
+      <h1>Burası Bir Başlık</h1>
+    </div>
   </div>
-  </div>  <div data-gnl="1 ortada" data-ort="1">
-  <div data-kart="haber">
-  <img src="https://placehold.it/300x300" alt="resim">
-  <h1>Burası Bir Başlık</h1>
+  <div data-gnl="1 ortada" data-ort="1">
+    <div data-kart="haber">
+      <img src="https://placehold.it/300x300" alt="resim">
+      <h1>Burası Bir Başlık</h1>
+    </div>
   </div>
-  </div>  <div data-gnl="1 ortada" data-ort="1">
-  <div data-kart="haber">
-  <img src="https://placehold.it/300x300" alt="resim">
-  <h1>Burası Bir Başlık</h1>
+  <div data-gnl="1 ortada" data-ort="1">
+    <div data-kart="haber">
+      <img src="https://placehold.it/300x300" alt="resim">
+      <h1>Burası Bir Başlık</h1>
+    </div>
   </div>
-  </div>  <div data-gnl="1 ortada" data-ort="1">
-  <div data-kart="haber">
-  <img src="https://placehold.it/300x300" alt="resim">
-  <h1>Burası Bir Başlık</h1>
+  <div data-gnl="1 ortada" data-ort="1">
+    <div data-kart="haber">
+      <img src="https://placehold.it/300x300" alt="resim">
+      <h1>Burası Bir Başlık</h1>
+    </div>
   </div>
-  </div>  <div data-gnl="1 ortada" data-ort="1">
-  <div data-kart="haber">
-  <img src="https://placehold.it/300x300" alt="resim">
-  <h1>Burası Bir Başlık</h1>
+  <div data-gnl="1 ortada" data-ort="1">
+    <div data-kart="haber">
+      <img src="https://placehold.it/300x300" alt="resim">
+      <h1>Burası Bir Başlık</h1>
+    </div>
   </div>
-  </div>  <div data-gnl="1 ortada" data-ort="1">
-  <div data-kart="haber">
-  <img src="https://placehold.it/300x300" alt="resim">
-  <h1>Burası Bir Başlık</h1>
+  <div data-gnl="1 ortada" data-ort="1">
+    <div data-kart="haber">
+      <img src="https://placehold.it/300x300" alt="resim">
+      <h1>Burası Bir Başlık</h1>
+    </div>
   </div>
-  </div>  <div data-gnl="1 ortada" data-ort="1">
-  <div data-kart="haber">
-  <img src="https://placehold.it/300x300" alt="resim">
-  <h1>Burası Bir Başlık</h1>
+  <div data-gnl="1 ortada" data-ort="1">
+    <div data-kart="haber">
+      <img src="https://placehold.it/300x300" alt="resim">
+      <h1>Burası Bir Başlık</h1>
+    </div>
   </div>
-  </div>  <div data-gnl="1 ortada" data-ort="1">
-  <div data-kart="haber">
-  <img src="https://placehold.it/300x300" alt="resim">
-  <h1>Burası Bir Başlık</h1>
+  <div data-gnl="1 ortada" data-ort="1">
+    <div data-kart="haber">
+      <img src="https://placehold.it/300x300" alt="resim">
+      <h1>Burası Bir Başlık</h1>
+    </div>
   </div>
-  </div>  <div data-gnl="1 ortada" data-ort="1">
-  <div data-kart="haber">
-  <img src="https://placehold.it/300x300" alt="resim">
-  <h1>Burası Bir Başlık</h1>
+  <div data-gnl="1 ortada" data-ort="1">
+    <div data-kart="haber">
+      <img src="https://placehold.it/300x300" alt="resim">
+      <h1>Burası Bir Başlık</h1>
+    </div>
   </div>
-  </div>  <div data-gnl="1 ortada" data-ort="1">
-  <div data-kart="haber">
-  <img src="https://placehold.it/300x300" alt="resim">
-  <h1>Burası Bir Başlık</h1>
+  <div data-gnl="1 ortada" data-ort="1">
+    <div data-kart="haber">
+      <img src="https://placehold.it/300x300" alt="resim">
+      <h1>Burası Bir Başlık</h1>
+    </div>
   </div>
-  </div>  <div data-gnl="1 ortada" data-ort="1">
-  <div data-kart="haber">
-  <img src="https://placehold.it/300x300" alt="resim">
-  <h1>Burası Bir Başlık</h1>
+  <div data-gnl="1 ortada" data-ort="1">
+    <div data-kart="haber">
+      <img src="https://placehold.it/300x300" alt="resim">
+      <h1>Burası Bir Başlık</h1>
+    </div>
   </div>
-  </div>  <div data-gnl="1 ortada" data-ort="1">
-  <div data-kart="haber">
-  <img src="https://placehold.it/300x300" alt="resim">
-  <h1>Burası Bir Başlık</h1>
+  <div data-gnl="1 ortada" data-ort="1">
+    <div data-kart="haber">
+      <img src="https://placehold.it/300x300" alt="resim">
+      <h1>Burası Bir Başlık</h1>
+    </div>
   </div>
-  </div>  <div data-gnl="1 ortada" data-ort="1">
-  <div data-kart="haber">
-  <img src="https://placehold.it/300x300" alt="resim">
-  <h1>Burası Bir Başlık</h1>
+  <div data-gnl="1 ortada" data-ort="1">
+    <div data-kart="haber">
+      <img src="https://placehold.it/300x300" alt="resim">
+      <h1>Burası Bir Başlık</h1>
+    </div>
   </div>
-  </div>  <div data-gnl="1 ortada" data-ort="1">
-  <div data-kart="haber">
-  <img src="https://placehold.it/300x300" alt="resim">
-  <h1>Burası Bir Başlık</h1>
-  </div>
-  </div>  <div data-gnl="1 ortada" data-ort="1">
-  <div data-kart="haber">
-  <img src="https://placehold.it/300x300" alt="resim">
-  <h1>Burası Bir Başlık</h1>
-  </div>
+  <div data-gnl="1 ortada" data-ort="1">
+    <div data-kart="haber">
+      <img src="https://placehold.it/300x300" alt="resim">
+      <h1>Burası Bir Başlık</h1>
+    </div>
   </div>
 </div>
