--- a/belgeler/kap-orgusu.html
+++ b/belgeler/kap-orgusu.html
@@ -6,7 +6,11 @@ title: Kap Örgüsü
     <h1>Kap Örgüsü <span data-metin="dikkat gri">(s0.9)</span></h1>
 
     <p>İşte bu! 1'den 24'e kadar olan sütun düzenlerini aynı anda kullanabilmek artık hayal değil. Deveb kap örgüsü bunu en hızlı şekilde yepyeni özelliklerle birlikte kullanımınıza sunuyor. Beğendiniz mi? O zaman kap örgüsünü öğrenerek bir başlangıç yapın. Unutmadan, artık öncelik küçük ekranlara ait.</p>
-
+    <br><br>
+    <span data-gnl="1 3p" style="border:1px solid rgba(100,200,300,0.1); background-color:#2c2171 !important; color:#fff;">ÇOKLU PARÇA</span>
+    <span data-gnl="1 3p" style="border:1px solid rgba(100,200,300,0.1); background-color:#2c2171 !important; color:#fff;">HIZLI ORAN</span>
+    <span data-gnl="1 3p" style="border:1px solid rgba(100,200,300,0.1); background-color:#2c2171 !important; color:#fff;">KAPLAMALAR</span>
+    <br><br>
     <h2>Kap Örgüsü Nedir?</h2>
 
     <p>Bir sayfanın içinde genişlikler belirlemeyi sağlayan örgüye kap örgüsü denir. Kap kelimesi genelde bir şeyi bir arada tutmaya yarayan fiziksel nesneler için kullanılır. Buradan yola çıkarak kodlama dünyasında kelimenin anlamını yerleştirebilirsiniz. Kap örgüsü İngilizce dilinde "grid system" diye anılmaktadır. Deveb çatısı altında bu örgü kendine özgü kullanımı ile diğerlerinin kap örgülerinden farklıdır ve ellbette benzer yönleri de kapsamaktadır.</p>
