--- a/belgeler/kap-orgusu.html
+++ b/belgeler/kap-orgusu.html
@@ -7,9 +7,9 @@ title: Kap Örgüsü
 
     <p>İşte bu! 1'den 24'e kadar olan sütun düzenlerini aynı anda kullanabilmek artık hayal değil. Deveb kap örgüsü bunu en hızlı şekilde yepyeni özelliklerle birlikte kullanımınıza sunuyor. Beğendiniz mi? O zaman kap örgüsünü öğrenerek bir başlangıç yapın. Unutmadan, artık öncelik küçük ekranlara ait.</p>
     <br><br>
-    <span data-gnl="1 3p" style="margin:20px 0; padding: 20px; border:1px solid rgba(100,200,250,0.1); font-size:18pt; background-color:#2c2171 !important; color:#fff;">ÇOKLU PARÇA</span>
-    <span data-gnl="1 3p" style="margin:20px 0; padding: 20px; border:1px solid rgba(100,200,250,0.1); font-size:18pt; background-color:#2c2171 !important; color:#fff;">HIZLI ORAN</span>
-    <span data-gnl="1 3p" style="margin:20px 0; padding: 20px; border:1px solid rgba(100,200,250,0.1); font-size:18pt; background-color:#2c2171 !important; color:#fff;">KAPLAMALAR</span>
+    <span data-gnl="1o ortada" style="margin:10px; padding: 20px; border:1px solid rgba(100,200,250,0.1); font-size:18pt; background-color:#2c2171 !important; color:#fff;">ÇOKLU PARÇA</span>
+    <span data-gnl="1o ortada" style="margin:10px; padding: 20px; border:1px solid rgba(100,200,250,0.1); font-size:18pt; background-color:#2c2171 !important; color:#fff;">HIZLI ORAN</span>
+    <span data-gnl="1o ortada" style="margin:10px; padding: 20px; border:1px solid rgba(100,200,250,0.1); font-size:18pt; background-color:#2c2171 !important; color:#fff;">KAPLAMALAR</span>
     <br><br>
     <h2>Kap Örgüsü Nedir?</h2>
 
