--- a/belgeler/ornekler/kap-orgusu-esit-bolme.html
+++ b/belgeler/ornekler/kap-orgusu-esit-bolme.html
@@ -3,7 +3,7 @@ layout: default
 title: Eşit Bölme Örneği - Kap Örgüsü
 ---
 <style media="screen">
-  div{border:1px solid red;}
+  div[data-gnl]>[data-gnl]{border:1px solid red;}
 </style>
 <div data-gnl="24p">
   <div data-gnl="1">1</div><div data-gnl="1">2</div><div data-gnl="1">3</div><div data-gnl="1">4</div>
