--- a/belgeler/ornekler/kap-orgusu-esit-bolme.html
+++ b/belgeler/ornekler/kap-orgusu-esit-bolme.html
@@ -3,8 +3,10 @@ layout: default
 title: Eşit Bölme Örneği - Kap Örgüsü
 ---
 <style media="screen">
-  div[data-gnl]>[data-gnl]{border:1px solid red;}
+  .özel-sınıf [data-gnl]{border:1px solid red;}
 </style>
+<div class="özel-sınıf">
+
 <div data-gnl="24p">
   <div data-gnl="1">1</div><div data-gnl="1">2</div><div data-gnl="1">3</div><div data-gnl="1">4</div>
   <div data-gnl="1">5</div><div data-gnl="1">6</div><div data-gnl="1">7</div><div data-gnl="1">8</div>
@@ -196,4 +198,6 @@ title: Eşit Bölme Örneği - Kap Örgüsü
   <div data-gnl="1">13</div><div data-gnl="1">14</div><div data-gnl="1">15</div><div data-gnl="1">16</div>
   <div data-gnl="1">17</div><div data-gnl="1">18</div><div data-gnl="1">19</div><div data-gnl="1">20</div>
   <div data-gnl="1">21</div><div data-gnl="1">22</div><div data-gnl="1">23</div><div data-gnl="1">24</div>
+</div>
+
 </div>
