--- a/belgeler/ornekler/kap-orgusu-esit-bolme.html
+++ b/belgeler/ornekler/kap-orgusu-esit-bolme.html
@@ -4,6 +4,7 @@ title: Eşit Bölme Örneği - Kap Örgüsü
 ---
 <style media="screen">
   .özel-sınıf [data-gnl]{border:1px solid red;}
+  .özel-sınıf > [data-gnl]{border:0px solid red; margin-bottom:20px;}
 </style>
 <div class="özel-sınıf">
 
