--- a/belgeler/ornekler/kap-orgusu-esit-bolme.html
+++ b/belgeler/ornekler/kap-orgusu-esit-bolme.html
@@ -6,7 +6,7 @@ title: Eşit Bölme Örneği - Kap Örgüsü
   .özel-sınıf [data-gnl]{border:1px solid red;}
   .özel-sınıf > [data-gnl]{border:0px solid red; margin-bottom:20px;}
 </style>
-<div class="özel-sınıf">
+<div data-gnl="24" class="özel-sınıf">
 
 <div data-gnl="24p">
   <div data-gnl="1">1</div><div data-gnl="1">2</div><div data-gnl="1">3</div><div data-gnl="1">4</div>
