--- a/belgeler/ornekler/kap-orgusu-esit-bolme.html
+++ b/belgeler/ornekler/kap-orgusu-esit-bolme.html
@@ -3,8 +3,16 @@ layout: default
 title: Eşit Bölme Örneği - Kap Örgüsü
 ---
 <style media="screen">
-  .özel-sınıf [data-gnl]{border:1px solid red;}
-  .özel-sınıf > [data-gnl]{border:0px solid red; margin-bottom:20px;}
+  .özel-sınıf [data-gnl]{
+    border:1px solid red;
+    border: 1px solid #2c2171;
+    padding: 10px;
+    justify-content: center;
+    text-align: left;
+  }
+  .özel-sınıf > [data-gnl]{
+    border:0px solid red; margin-bottom:20px;
+  }
 </style>
 <div data-gnl="24" class="özel-sınıf">
 
