--- a/belgeler/ornekler/kap-orgusu-esit-bolme.html
+++ b/belgeler/ornekler/kap-orgusu-esit-bolme.html
@@ -16,7 +16,8 @@ title: Eşit Bölme Örneği - Kap Örgüsü
   }
 </style>
 <div data-gnl="24" class="özel-sınıf">
-
+<h1>EŞİT BÖLME ÖRNEĞİ - KAP ÖRGÜSÜ</h1>
+<p>Kap örgüsünün özelliklerini kullanarak eşit genişliklerde bölme düzenini çok basit bir şekilde yapabilirsiniz. Bunun için aşağıdaki ilk 2 örneği HTML'i ile birlikte inceleyip ikisi arasındaki farkı bulduktan sonra aşağıya doğru devam eden örneklerin nasıl yapıldığını anlayacaksınız.</p>
 <div data-gnl="24p">
   <div data-gnl="1">1</div><div data-gnl="1">2</div><div data-gnl="1">3</div><div data-gnl="1">4</div>
   <div data-gnl="1">5</div><div data-gnl="1">6</div><div data-gnl="1">7</div><div data-gnl="1">8</div>
