--- a/belgeler/ornekler/kap-orgusu-esit-bolme.html
+++ b/belgeler/ornekler/kap-orgusu-esit-bolme.html
@@ -13,6 +13,7 @@ title: Eşit Bölme Örneği - Kap Örgüsü
   .özel-sınıf > [data-gnl]{
     border:0px solid red; margin-bottom:20px;
     justify-content:flex-start;
+    padding:0;
   }
 </style>
 <div data-gnl="24" class="özel-sınıf">
