--- a/belgeler/kap-orgusu/olcekler.html
+++ b/belgeler/kap-orgusu/olcekler.html
@@ -2,7 +2,7 @@
 layout: default
 title: K.Ö. Ölçekleri
 ---
-<h1>Ölçekleri</h1>
+<h1>Ölçekler - Kap Örgüsü</h1>
 <div data-gnl="24">
   <h2>Parça Yöntemi Ölçekleri</h2>
   <p>Aşağıdaki tabloda 24 parçalı gruba kadar belirlenmiş parça gruplarını görmektesiniz. Bir genişlikte tablodaki değerlere göre düzen kurmak istiyorsanız tip="değer" kuralı üzerinden sınıf yazarsınız. Örnek: data-gnl="4 8p" yani tüm ekranlarda içinde bulunduğu genişliğin 8'e bölünmüş eşit parçasından 4 tanesinin toplamı kadar genişlik kullanılacağını belirtir. </p>
