--- a/belgeler/deveb.html
+++ b/belgeler/deveb.html
@@ -10,23 +10,25 @@ title: Hakkında
 <p>Deveb'in veri niteliği yöntemini kullanmasının birkaç sebebini okudunuz. Biraz da ekran ölçeklerinden bahsedelim.</p>
 <h1>Ekran Ölçeklerinin Beyi Olun</h1>
 <p>Ekran ölçekleri söz konusu olunca ilk akla gelen akıllı telefonlar, tabletler, dizüstü ve masaüstü ekranlar. Deveb bu seçenekleri biraz daha genişletmiş durumda. Yani kol saati kadar ekranların üretilme ihtimalini göz önünde bile bulundurarak "minik ekranlar" terimine bir karşılık verebilir durumda. Hatta "büyük ekranlar" terimiyle bitirmeyip "koca(man) ekran", "dev ekran" terimleri içinde karşılığı bulunmaktadır. Gelin ekran terimlerini hem İngilizce hem Türkçe olarak açıklayalım.</p>
-<ul data-gnl="1 2p">
-  <li><h2>Türkçe</h2></li>
-  <li>minik</li>
-  <li>ufak</li>
-  <li>küçük</li>
-  <li>orta</li>
-  <li>büyük</li>
-  <li>kocaman</li>
-  <li>dev</li>
-</ul>
-<ul data-gnl="1 2p">
-  <li><h2>İngilizce</h2></li>
-  <li>tiny</li>
-  <li>extra small</li>
-  <li>small</li>
-  <li>medium</li>
-  <li>large</li>
-  <li>extra large</li>
-  <li>huge</li>
-</ul>
+<div>
+  <div data-gnl="1 2p sağda">
+    <h2>Türkçe</h2>
+     minik<br>
+     ufak<br>
+     küçük<br>
+     orta<br>
+     büyük<br>
+     kocaman<br>
+     dev<br>
+  </div>
+  <div data-gnl="1 2p">
+    <h2>İngilizce</h2>
+    tiny<br>
+    extra small<br>
+    small<br>
+    medium<br>
+    large<br>
+    extra large<br>
+    huge<br>
+  </div>
+</div>
