--- a/belgeler/deveb.html
+++ b/belgeler/deveb.html
@@ -11,24 +11,20 @@ title: Hakkında
 <h1>Ekran Ölçeklerinin Beyi Olun</h1>
 <p>Ekran ölçekleri söz konusu olunca ilk akla gelen akıllı telefonlar, tabletler, dizüstü ve masaüstü ekranlar. Deveb bu seçenekleri biraz daha genişletmiş durumda. Yani kol saati kadar ekranların üretilme ihtimalini göz önünde bile bulundurarak "minik ekranlar" terimine bir karşılık verebilir durumda. Hatta "büyük ekranlar" terimiyle bitirmeyip "koca(man) ekran", "dev ekran" terimleri içinde karşılığı bulunmaktadır. Gelin ekran terimlerini hem İngilizce hem Türkçe olarak açıklayalım.</p>
 <div>
-  <div data-gnl="1 2p sağda">
-    <h2>Türkçe</h2>
-     minik<br>
-     ufak<br>
-     küçük<br>
-     orta<br>
-     büyük<br>
-     kocaman<br>
-     dev<br>
-  </div>
-  <div data-gnl="1 2p">
-    <h2>İngilizce</h2>
-    tiny<br>
-    extra small<br>
-    small<br>
-    medium<br>
-    large<br>
-    extra large<br>
-    huge<br>
-  </div>
+  <div data-gnl="1 8p"><h2>Türkçe</h2></div>
+  <div data-gnl="1 8p">minik</div>
+  <div data-gnl="1 8p">ufak</div>
+  <div data-gnl="1 8p">küçük</div>
+  <div data-gnl="1 8p">orta</div>
+  <div data-gnl="1 8p">büyük</div>
+  <div data-gnl="1 8p">kocaman</div>
+  <div data-gnl="1 8p">dev</div>
+  <div data-gnl="1 8p"><h2>İngilizce</h2></div>
+  <div data-gnl="1 8p">tiny</div>
+  <div data-gnl="1 8p">extra small</div>
+  <div data-gnl="1 8p">small</div>
+  <div data-gnl="1 8p">medium</div>
+  <div data-gnl="1 8p">large</div>
+  <div data-gnl="1 8p">extra large</div>
+  <div data-gnl="1 8p">huge</div>
 </div>
