--- a/belgeler/deveb.html
+++ b/belgeler/deveb.html
@@ -4,12 +4,13 @@ title: Hakkında
 ---
 <h1>Deveb Hakkında</h1>
 <p>Deveb, Türkçe ve İngilizce terimler kullanılarak geliştirilen bir önyüz çatısıdır. Ağ geliştiricileri ve adayları (web developers) alışılmış olanın ötesine geçmeye hazırlanın. Deveb yeni bir soluk getiriyor. Özellikleriyle birlikte ele alındığında etkisi altında kalacaksınız. Barındırdığı kuralları öğrenmek ise fazla vaktinizi almayacak.</p>
-<h1>Diğerlerinden Farklı</h1>
+<h1>Genel Sınıflar Değil, Veri Niteliği Sınıfları Tanımladık!</h1>
 <p>Deveb "html class" diye bilinen sınıf özelliğini bir kenara koyuyor. Yani bu alanı Deveb'i kullanmak isteyen ağ geliştiricileri için boşaltıyor. Peki bir geliştirici Deveb'i nasıl kullanacak? Deveb'in özellikleri "data-attr" olarak bilinen veri niteliği ile birlikte kullanılmaktadır.</p>
 <p>Deveb'i karşınıza koyduğunuzda gözünüze çarpacak olan ilk kural ekran ölçeklerinin veri niteliği olarak tanımlandırılabilmesi olacak. Bu şu demek oluyor; her ekran ölçeğini bir veri niteliği olarak tanımlayıp içine sınıfları yazabileceksiniz. Böylelikle ekran ölçeklerine hakimiyetiniz kolaylaşacak. Tasarımlarınızı yaparken bunu daha iyi fark edeceksiniz. Dikkatinizi çekmek istediğimiz nokta diğer önyüz çatılarında sınıflarla çalışırken her şeyi bir arada yazmanız gerekir. Bunların yanına harici olarak oluşturulmuş sınıfları eklediğinizde her şey iç içe girmeye başlar. CSS tarafında bunlara söz geçirmek teknik olarak sorunsuz olsa da Deveb'teki gibi kullanım etkilerine ve kolaylıklarına her zaman sahip olmaz. Örneğin Deveb diğer önyüz çatılarıyla çakışmadan bir arada kullanılabilir. Diğerleri benzer sınıf terimleri kullandığı için düzeltmeler yapmak zorunluğuyla karşı karşıya kalma olasılığına her zaman sahip olacaksınız.</p>
 <p>Deveb'in veri niteliği yöntemini kullanmasının birkaç sebebini okudunuz. Biraz da ekran ölçeklerinden bahsedelim.</p>
-<h1>Ekran Ölçeklerinin Beyi Olun</h1>
+<h1>Ekran Ölçeklerine Göre Sınıfları Kullanın</h1>
 <p>Ekran ölçekleri söz konusu olunca ilk akla gelen akıllı telefonlar, tabletler, dizüstü ve masaüstü ekranlar. Deveb bu seçenekleri biraz daha genişletmiş durumda. Yani kol saati kadar ekranların üretilme ihtimalini göz önünde bile bulundurarak "minik ekranlar" terimine bir karşılık verebilir durumda. Hatta "büyük ekranlar" terimiyle bitirmeyip "koca(man) ekran", "dev ekran" terimleri içinde karşılığı bulunmaktadır. Gelin ekran terimlerini hem İngilizce hem Türkçe olarak açıklayalım.</p>
+<p>Diğer önyüz çatılarında ekran ölçeklerini sınıflarla birlikte kullanırsınız. Deveb'de ise ekran ölçeği veri niteliği (data-attr) olarak tanımlandığı için yapmak istediklerinizi veri niteliğinin içinde belirtirsiniz. Hangi ekran ölçeğini kullanacağınızı belirttiğiniz veri niteliğinde şu an kap örgüsünün özelliklerini kullanabilmektesiniz. Öncesinde ekran ölçeklerinin isimlendirilişine bakalım.</p>
 <p></p>
 <div data-gnl="24 24p">
   <div data-gnl="1 8p"><h2>Türkçe</h2></div>
@@ -29,3 +30,4 @@ title: Hakkında
   <div data-gnl="1 8p">extra large</div>
   <div data-gnl="1 8p">huge</div>
 </div>
+<p></p>
