--- a/belgeler/deveb.html
+++ b/belgeler/deveb.html
@@ -11,23 +11,23 @@ title: Hakkında
 <h1>Ekran Ölçeklerine Göre Sınıfları Kullanın</h1>
 <p>Ekran ölçekleri söz konusu olunca ilk akla gelen akıllı telefonlar, tabletler, dizüstü ve masaüstü ekranlar. Deveb bu seçenekleri biraz daha genişletmiş durumda. Yani kol saati kadar ekranların üretilme ihtimalini göz önünde bile bulundurarak "minik ekranlar" terimine bir karşılık verebilir durumda. Hatta "büyük ekranlar" terimiyle bitirmeyip "koca(man) ekran", "dev ekran" terimleri içinde karşılığı bulunmaktadır. Gelin ekran terimlerini hem İngilizce hem Türkçe olarak açıklayalım.</p>
 <p>Diğer önyüz çatılarında ekran ölçeklerini sınıflarla birlikte kullanırsınız. Deveb'de ise ekran ölçeği veri niteliği (data-attr) olarak tanımlandığı için yapmak istediklerinizi veri niteliğinin içinde belirtirsiniz. Hangi ekran ölçeğini kullanacağınızı belirttiğiniz veri niteliğinde şu an kap örgüsünün özelliklerini kullanabilmektesiniz. Öncesinde ekran ölçeklerinin isimlendirilişine bakalım.</p>
-<p></p> 
-<div data-gnl="24 24p">
+<p></p>
+<div data-gnl="24 24p uzat">
   <div data-gnl="1 8p"><h2>Türkçe</h2></div>
-  <div data-gnl="1 8p">minik</div>
-  <div data-gnl="1 8p">ufak</div>
-  <div data-gnl="1 8p">küçük</div>
-  <div data-gnl="1 8p">orta</div>
-  <div data-gnl="1 8p">büyük</div>
-  <div data-gnl="1 8p">kocaman</div>
-  <div data-gnl="1 8p">dev</div>
+  <div data-gnl="1 8p">minik<br>data-mnk=""</div>
+  <div data-gnl="1 8p">ufak<br>data-ufk=""</div>
+  <div data-gnl="1 8p">küçük<br>data-kçk=""</div>
+  <div data-gnl="1 8p">orta<br>data-ort=""</div>
+  <div data-gnl="1 8p">büyük<br>data-byk=""</div>
+  <div data-gnl="1 8p">kocaman<br>data-kcm=""</div>
+  <div data-gnl="1 8p">dev<br>data-dev=""</div>
   <div data-gnl="1 8p"><h2>İngilizce</h2></div>
-  <div data-gnl="1 8p">tiny</div>
-  <div data-gnl="1 8p">extra small</div>
-  <div data-gnl="1 8p">small</div>
-  <div data-gnl="1 8p">medium</div>
-  <div data-gnl="1 8p">large</div>
-  <div data-gnl="1 8p">extra large</div>
-  <div data-gnl="1 8p">huge</div>
+  <div data-gnl="1 8p">tiny<br>data-tny=""</div>
+  <div data-gnl="1 8p">extra small<br>data-xs=""</div>
+  <div data-gnl="1 8p">small<br>data-sm=""</div>
+  <div data-gnl="1 8p">medium<br>data-md=""</div>
+  <div data-gnl="1 8p">large<br>data-lg=""</div>
+  <div data-gnl="1 8p">extra large<br>data-xl=""</div>
+  <div data-gnl="1 8p">huge<br>data-hg=""</div>
 </div>
 <p></p>
