--- a/belgeler/deveb.html
+++ b/belgeler/deveb.html
@@ -13,21 +13,21 @@ title: Hakkında
 <p>Diğer önyüz çatılarında ekran ölçeklerini sınıflarla birlikte kullanırsınız. Deveb'de ise ekran ölçeği veri niteliği (data-attr) olarak tanımlandığı için yapmak istediklerinizi veri niteliğinin içinde belirtirsiniz. Hangi ekran ölçeğini kullanacağınızı belirttiğiniz veri niteliğinde şu an kap örgüsünün özelliklerini kullanabilmektesiniz. Öncesinde ekran ölçeklerinin isimlendirilişine bakalım.</p>
 <p></p>
 <div data-gnl="24 24p uzat">
-  <div data-gnl="1 8p"><h2>Türkçe</h2></div>
-  <div data-gnl="1 8p">minik<br>data-mnk=""</div>
-  <div data-gnl="1 8p">ufak<br>data-ufk=""</div>
-  <div data-gnl="1 8p">küçük<br>data-kçk=""</div>
-  <div data-gnl="1 8p">orta<br>data-ort=""</div>
-  <div data-gnl="1 8p">büyük<br>data-byk=""</div>
-  <div data-gnl="1 8p">kocaman<br>data-kcm=""</div>
-  <div data-gnl="1 8p">dev<br>data-dev=""</div>
-  <div data-gnl="1 8p"><h2>İngilizce</h2></div>
-  <div data-gnl="1 8p">tiny<br>data-tny=""</div>
-  <div data-gnl="1 8p">extra small<br>data-xs=""</div>
-  <div data-gnl="1 8p">small<br>data-sm=""</div>
-  <div data-gnl="1 8p">medium<br>data-md=""</div>
-  <div data-gnl="1 8p">large<br>data-lg=""</div>
-  <div data-gnl="1 8p">extra large<br>data-xl=""</div>
-  <div data-gnl="1 8p">huge<br>data-hg=""</div>
+  <div data-gnl="1 3p" data-ort="1 8p"><h2>Türkçe</h2></div>
+  <div data-gnl="1 3p" data-ort="1 8p">minik<br>data-mnk=""</div>
+  <div data-gnl="1 3p" data-ort="1 8p">ufak<br>data-ufk=""</div>
+  <div data-gnl="1 3p" data-ort="1 8p">küçük<br>data-kçk=""</div>
+  <div data-gnl="1 3p" data-ort="1 8p">orta<br>data-ort=""</div>
+  <div data-gnl="1 3p" data-ort="1 8p">büyük<br>data-byk=""</div>
+  <div data-gnl="1 3p" data-ort="1 8p">kocaman<br>data-kcm=""</div>
+  <div data-gnl="1 3p" data-ort="1 8p">dev<br>data-dev=""</div>
+  <div data-gnl="1 3p" data-ort="1 8p"><h2>İngilizce</h2></div>
+  <div data-gnl="1 3p" data-ort="1 8p">tiny<br>data-tny=""</div>
+  <div data-gnl="1 3p" data-ort="1 8p">extra small<br>data-xs=""</div>
+  <div data-gnl="1 3p" data-ort="1 8p">small<br>data-sm=""</div>
+  <div data-gnl="1 3p" data-ort="1 8p">medium<br>data-md=""</div>
+  <div data-gnl="1 3p" data-ort="1 8p">large<br>data-lg=""</div>
+  <div data-gnl="1 3p" data-ort="1 8p">extra large<br>data-xl=""</div>
+  <div data-gnl="1 3p" data-ort="1 8p">huge<br>data-hg=""</div>
 </div>
 <p></p>
