--- a/belgeler/deveb.html
+++ b/belgeler/deveb.html
@@ -30,4 +30,5 @@ title: Hakkında
   <div data-gnl="1 3p" data-ort="1 8p">extra large<br>data-xl=""</div>
   <div data-gnl="1 3p" data-ort="1 8p">huge<br>data-hg=""</div>
 </div>
-<p></p>
+<h1>Kap Örgüsünü 1'den 24'e Kadar Aynı Anda Kullanın</h1>
+<p>Nasıl ya? Evet doğru duydunuz. Dilediğiniz an 12'li, 18'li, 10'lu, 24'lü kap örgüsü kurabiliyorsunuz. Bunun için CSS dosyalarına müdahale etmeniz gerekmiyor. Evet aynı sayfa içinde çoklu düzen kurabilirsiniz. Heyecanlandırıcı değil mi? Kap örgüsü keşfedilmeyi bekliyor. Şu an geliştirilmiş haliyle çok başarılı çalışmalar çıkabilirsiniz. Yakında belki yeni özellikler kazanır. ;)</p>
