--- a/belgeler/deveb.html
+++ b/belgeler/deveb.html
@@ -2,7 +2,9 @@
 layout: default
 title: Hakkında
 ---
-
+{% contentfor sidebar %}
+deneme
+{% endcontentfor %}
 <h1>Deveb Hakkında</h1>
 <p>Deveb, Türkçe ve İngilizce terimler kullanılarak geliştirilen bir önyüz çatısıdır. Ağ geliştiricileri ve adayları (web developers) alışılmış olanın ötesine geçmeye hazırlanın. Deveb yeni bir soluk getiriyor. Özellikleriyle birlikte ele alındığında etkisi altında kalacaksınız. Barındırdığı kuralları öğrenmek ise fazla vaktinizi almayacak.</p>
 <h1>Genel Sınıfları Değil, Veri Niteliği Sınıfları Tanımladık!</h1>
