--- a/belgeler/terimler.html
+++ b/belgeler/terimler.html
@@ -3,6 +3,85 @@ layout: default
 title: Terimler
 ---
 
+<style type="text/css">
+.tg  {border-collapse:collapse;border-spacing:0;}
+.tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;}
+.tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;}
+.tg .tg-7uzy{vertical-align:top}
+.tg .tg-sh4c{text-align:center;vertical-align:top}
+.tg .tg-baqh{text-align:center;vertical-align:top}
+.tg .tg-yw4l{vertical-align:top}
+</style>
+<table class="tg">
+  <tr>
+    <th class="tg-baqh" colspan="5">Ekran Ölçekleri Tablosu<br></th>
+  </tr>
+  <tr>
+    <td class="tg-7uzy"><br></td>
+    <td class="tg-7uzy">Türkçe<br>Terimler</td>
+    <td class="tg-7uzy">English<br>Terms<br></td>
+    <td class="tg-7uzy">Açıklamalar</td>
+    <td class="tg-7uzy">Descriptions</td>
+  </tr>
+  <tr>
+    <td class="tg-yw4l">Tüm ekranlar<br></td>
+    <td class="tg-baqh">gnl</td>
+    <td class="tg-baqh">gnl</td>
+    <td class="tg-yw4l">Minik ekranlardan devasa ekranlara doğru ekranların hepsini seçer<br></td>
+    <td class="tg-yw4l">Selects all screens from mini screens to huge screens</td>
+  </tr>
+  <tr>
+    <td class="tg-7uzy">Minik ekran<br></td>
+    <td class="tg-sh4c">mnk<br></td>
+    <td class="tg-sh4c">mn</td>
+    <td class="tg-7uzy">Minik ekranlardan devasa ekranlara doğru ekranların hepsini seçer. "gnl" terimi ile aynıdır.<br></td>
+    <td class="tg-7uzy">Selects all screens from mini screens to huge screens. It is the same as the "gnl" term.</td>
+  </tr>
+  <tr>
+    <td class="tg-yw4l">Telefon ekranı<br></td>
+    <td class="tg-baqh">ufk<br></td>
+    <td class="tg-baqh">xs<br></td>
+    <td class="tg-yw4l">Telefon ekranlarından devasa ekranlara doğru ekranların hepsini seçer</td>
+    <td class="tg-yw4l">Selects all screens from mobile screens to huge screens</td>
+  </tr>
+  <tr>
+    <td class="tg-7uzy">Tablet ekranı<br></td>
+    <td class="tg-sh4c">kçk</td>
+    <td class="tg-sh4c">sm<br></td>
+    <td class="tg-7uzy">Tablet ekranlarından devasa ekranlara doğru ekranların hepsini seçer</td>
+    <td class="tg-7uzy">Selects all screens from tablet screens to huge screens</td>
+  </tr>
+  <tr>
+    <td class="tg-yw4l">Dizüstü ekranı<br></td>
+    <td class="tg-baqh">ort</td>
+    <td class="tg-baqh">md<br></td>
+    <td class="tg-yw4l">Dizüstü ekranlarından devasa ekranlara doğru ekranların hepsini seçer</td>
+    <td class="tg-yw4l">Selects all screens from laptop screens to huge screens</td>
+  </tr>
+  <tr>
+    <td class="tg-7uzy">Masaüstü ekranı<br></td>
+    <td class="tg-sh4c">byk<br></td>
+    <td class="tg-sh4c">lg<br></td>
+    <td class="tg-7uzy">Masaüstü ekranlarından devasa ekranlara doğru ekranların hepsini seçer</td>
+    <td class="tg-7uzy">Selects all screens from desktop screens to huge screens</td>
+  </tr>
+  <tr>
+    <td class="tg-yw4l">Televizyon ekranı<br></td>
+    <td class="tg-baqh">kcm</td>
+    <td class="tg-baqh">xl</td>
+    <td class="tg-yw4l">Televizyon ekranlarından devasa ekranlara doğru ekranların hepsini seçer</td>
+    <td class="tg-yw4l">Selects all screens from TV screens to huge screens</td>
+  </tr>
+  <tr>
+    <td class="tg-7uzy">Dev ekranlar<br></td>
+    <td class="tg-sh4c">dev</td>
+    <td class="tg-sh4c">hg<br></td>
+    <td class="tg-7uzy">Devasa ekranları seçer<br></td>
+    <td class="tg-7uzy">Selects huge screens<br></td>
+  </tr>
+</table>
+
+
 <h1>Terimler</h1>
 <p><span data-metin="dikkat">data-gnl</span>: Telefon ekranları ve daha büyük ekranlar için kap örgüsü genişliği tanımlar.</p>
 
