--- a/belgeler/terimler.html
+++ b/belgeler/terimler.html
@@ -14,7 +14,7 @@ title: Terimler
 </style>
 <table class="tg">
   <tr>
-    <th class="tg-baqh" colspan="5">Ekran Ölçekleri Tablosu<br></th>
+    <th class="tg-baqh" colspan="5">Ekran Ölçekleri Tablosu | Screen Sizes Table<br></th>
   </tr>
   <tr>
     <td class="tg-7uzy"><br></td>
