--- a/belgeler/terimler.html
+++ b/belgeler/terimler.html
@@ -15,10 +15,11 @@ title: Terimler
 </style>
 <table class="tg">
   <tr>
-    <th class="tg-baqh" colspan="5">Ekran Ölçekleri Tablosu | Screen Sizes Table<br></th>
+    <th class="tg-baqh" colspan="6">Ekran Ölçekleri Tablosu<br></th>
   </tr>
   <tr>
-    <td class="tg-7uzy"><br></td>
+    <td class="tg-7uzy">Türkçe<br>Terimler<br></td>
+    <td class="tg-7uzy">English<br>Terms<br></td>
     <td class="tg-7uzy">Türkçe<br>Terimler</td>
     <td class="tg-7uzy">English<br>Terms<br></td>
     <td class="tg-7uzy">Açıklamalar</td>
@@ -26,6 +27,7 @@ title: Terimler
   </tr>
   <tr>
     <td class="tg-yw4l">Tüm ekranlar<br></td>
+    <td class="tg-yw4l">All screens<br></td>
     <td class="tg-baqh">gnl</td>
     <td class="tg-baqh">gnl</td>
     <td class="tg-yw4l">Minik ekranlardan devasa ekranlara doğru ekranların hepsini seçer<br></td>
@@ -33,6 +35,7 @@ title: Terimler
   </tr>
   <tr>
     <td class="tg-7uzy">Minik ekran<br></td>
+    <td class="tg-7uzy">Mini screen<br></td>
     <td class="tg-sh4c">mnk<br></td>
     <td class="tg-sh4c">mn</td>
     <td class="tg-7uzy">Minik ekranlardan devasa ekranlara doğru ekranların hepsini seçer. "gnl" terimi ile aynıdır.<br></td>
@@ -40,6 +43,7 @@ title: Terimler
   </tr>
   <tr>
     <td class="tg-yw4l">Telefon ekranı<br></td>
+    <td class="tg-yw4l">Mobile screen<br></td>
     <td class="tg-baqh">ufk<br></td>
     <td class="tg-baqh">xs<br></td>
     <td class="tg-yw4l">Telefon ekranlarından devasa ekranlara doğru ekranların hepsini seçer</td>
@@ -47,6 +51,7 @@ title: Terimler
   </tr>
   <tr>
     <td class="tg-7uzy">Tablet ekranı<br></td>
+    <td class="tg-7uzy">Tablet screen<br></td>
     <td class="tg-sh4c">kçk</td>
     <td class="tg-sh4c">sm<br></td>
     <td class="tg-7uzy">Tablet ekranlarından devasa ekranlara doğru ekranların hepsini seçer</td>
@@ -54,6 +59,7 @@ title: Terimler
   </tr>
   <tr>
     <td class="tg-yw4l">Dizüstü ekranı<br></td>
+    <td class="tg-yw4l">Laptop<br>screen<br></td>
     <td class="tg-baqh">ort</td>
     <td class="tg-baqh">md<br></td>
     <td class="tg-yw4l">Dizüstü ekranlarından devasa ekranlara doğru ekranların hepsini seçer</td>
@@ -61,6 +67,7 @@ title: Terimler
   </tr>
   <tr>
     <td class="tg-7uzy">Masaüstü ekranı<br></td>
+    <td class="tg-7uzy">Desktop screen<br></td>
     <td class="tg-sh4c">byk<br></td>
     <td class="tg-sh4c">lg<br></td>
     <td class="tg-7uzy">Masaüstü ekranlarından devasa ekranlara doğru ekranların hepsini seçer</td>
@@ -68,6 +75,7 @@ title: Terimler
   </tr>
   <tr>
     <td class="tg-yw4l">Televizyon ekranı<br></td>
+    <td class="tg-yw4l">TV screen<br></td>
     <td class="tg-baqh">kcm</td>
     <td class="tg-baqh">xl</td>
     <td class="tg-yw4l">Televizyon ekranlarından devasa ekranlara doğru ekranların hepsini seçer</td>
@@ -75,6 +83,7 @@ title: Terimler
   </tr>
   <tr>
     <td class="tg-7uzy">Dev ekranlar<br></td>
+    <td class="tg-7uzy">Huge screen<br></td>
     <td class="tg-sh4c">dev</td>
     <td class="tg-sh4c">hg<br></td>
     <td class="tg-7uzy">Devasa ekranları seçer<br></td>
