--- a/sohbet.html
+++ b/sohbet.html
@@ -1,4 +1,4 @@
 ---
 layout: home
 ---
-<iframe src="https://discordapp.com/widget?id=286591644730392577&theme=dark" width="100%" height="100%" allowtransparency="true" frameborder="0"></iframe>
+<iframe src="https://discordapp.com/widget?id=286591644730392577&theme=dark" width="100%" height="80vh" allowtransparency="true" frameborder="0"></iframe>
