--- a/belgeler/takim.html
+++ b/belgeler/takim.html
@@ -9,42 +9,42 @@ title: Deveb'in İnsanları
   <div data-gnl="1" data-kçk="1" data-ort="1">
     <div>
       <i class="fa fa-flask beri-2" style="font-size:60pt;"></i> <br>
-      <h2 data-metin="olumlu">GELİŞTİRİCİLER</h2> <br>
+      <h2 data-metin="ilk olumlu">GELİŞTİRİCİLER</h2> <br>
       Deveb'i' geliştirmek üzere bir araya gelerek her şeyi etkileyen işleri yaparlar.
     </div>
   </div>
   <div data-gnl="1" data-kçk="1" data-ort="1">
     <div>
       <i class="fa fa-briefcase beri-2" style="font-size:60pt;"></i> <br>
-      <h2 data-metin="olumlu">EĞİTİMCİLER</h2> <br>
+      <h2 data-metin="ilk olumlu">EĞİTİMCİLER</h2> <br>
       Deveb'i daha iyi kullanabilmek amacıyla örnekler, eğitimler ve diğer şeyleri hazırlarlar.
     </div>
   </div>
   <div data-gnl="1" data-kçk="1" data-ort="1">
     <div>
       <i class="fa fa-gears beri-2" style="font-size:60pt;"></i> <br>
-      <h2 data-metin="olumlu">DENETLEYİCİLER</h2> <br>
+      <h2 data-metin="ilk olumlu">DENETLEYİCİLER</h2> <br>
       Deveb ile her şeyin gerçekten sorunsuz olup olmadığını denetleyerek hataların olup olmadığı keşfini yaparlar.
     </div>
   </div>
   <div data-gnl="1" data-kçk="1" data-ort="1">
     <div>
       <i class="fa fa-handshake-o beri-2" style="font-size:60pt;"></i> <br>
-      <h2 data-metin="olumlu">DESTEKÇİLER</h2> <br>
+      <h2 data-metin="ilk olumlu">DESTEKÇİLER</h2> <br>
       Deveb'e çeşitli yönlerden destek olurlar. Arkadaşlarıyla bir mekanda otururken Deveb hakkında konuşmaları bile bir destektir.
     </div>
   </div>
   <div data-gnl="1" data-kçk="1" data-ort="1">
     <div>
       <i class="fa fa-eye beri-2" style="font-size:60pt;"></i> <br>
-      <h2 data-metin="olumlu">GÖRÜŞÇÜLER</h2> <br>
+      <h2 data-metin="ilk olumlu">GÖRÜŞÇÜLER</h2> <br>
       Deveb hakkında önerilerde bulunmak için görüşlerini yansıtırlar. Aralarında etkileyici görüşler belirten oldu... Senin de olabilir.
     </div>
   </div>
   <div data-gnl="1" data-kçk="1" data-ort="1">
     <div>
       <i class="fa fa-group beri-2" style="font-size:60pt;"></i> <br>
-      <h2 data-metin="olumlu">TAKİPÇİLER</h2> <br>
+      <h2 data-metin="ilk olumlu">TAKİPÇİLER</h2> <br>
       Deveb gelişmelerini yakından takip ederek haberdar olmak isterler. Gelecekte deveb'i kullanacaklarına inanıyoruz.
     </div>
   </div>
