--- a/belgeler/kurulum.html
+++ b/belgeler/kurulum.html
@@ -4,7 +4,14 @@ title: Kurulum
 ---
 <div data-gnl="24">
     <h1>Deveb Kurulumu</h1>
-    <p>Deveb kullanımı için yapmanız gereken sadece CSS dosyasını dahil etmenizdir.<br><br></p>
+    <p>Deveb kullanımı için yapmanız gereken sadece CSS dosyasını dahil etmenizdir.</p>
+
+    <h2>Türkçe düşünenler için Türkçe diliyle Deveb</h2>
     <pre style='color:#000000;background:#ffffff;'><span style='color:#a65700; '>&lt;</span><span style='color:#800000; font-weight:bold; '>link</span><span style='color:#274796; '> </span><span style='color:#074726; '>href</span><span style='color:#808030; '>=</span><span style='color:#0000e6; '>"/css/deveb.css"</span><span style='color:#274796; '> </span><span style='color:#074726; '>rel</span><span style='color:#808030; '>=</span><span style='color:#0000e6; '>"stylesheet"</span><span style='color:#a65700; '>></span></pre>
-    <p><br><a href="https://data-deveb.github.io/assets/css/deveb.css">Deveb'i buradan indirebilirsiniz..</a></p>
+    <p><a href="https://data-deveb.github.io/assets/css/deveb.css">Deveb'i buradan indirebilirsiniz</a></p>
+
+    <h2>İngilizce düşünenler için İngilizce diliyle Deveb</h2>
+    <pre style='color:#000000;background:#ffffff;'><span style='color:#a65700; '>&lt;</span><span style='color:#800000; font-weight:bold; '>link</span><span style='color:#274796; '> </span><span style='color:#074726; '>href</span><span style='color:#808030; '>=</span><span style='color:#0000e6; '>"/css/deveb.english.css"</span><span style='color:#274796; '> </span><span style='color:#074726; '>rel</span><span style='color:#808030; '>=</span><span style='color:#0000e6; '>"stylesheet"</span><span style='color:#a65700; '>></span></pre>
+    <p><a href="https://data-deveb.github.io/assets/css/deveb.english.css">Deveb'i buradan indirebilirsiniz</a></p>
+
 </div>
