--- a/belgeler/ekran-orgusu.html
+++ b/belgeler/ekran-orgusu.html
@@ -17,4 +17,7 @@ title: Ekran Örgüsü
     <h3>Kullanımı</h3>
     <p>Az önce belirttiğimiz gibi bazı özelliklerinde varsayılan yön küçükten büyüğe doğru demiştik. Kap örgüsü mesela buna bir örnektir. Ve sadece bu şekilde kullanılması dışında bir özelliğe sahip değildir. Kap örgüsünden bir alıntı yapalım isterseniz.</p>
     <p>Örneğin dizüstü ekranlardan başlayarak daha büyük ekranlarda bir alanın yarısı kadar alan parçası kullanmak istiyorsak şöyle yazabiliriz; data-ort="1 2p". Daha küçük olan ekranlar ne olacak diye soruyor gibisiniz... Tanımlama yapmadıysanız büyük ihtimal doğal (auto) genişliğe sahip olacaktır.</p>
+    <p>Diğer durumlarda ise ekran yönlerini belirtmek için şöyle kullanımlara baş vururuz;</p>
+    <p>Türkçe: öncesiyle-?, öncesini-?, ?, sonrasıyla-?, sonrasını-?</p>
+    <p>English: ?-with-before, ?-before, ?, ?-with-after, ?-after</p>
 </div>
