--- a/belgeler/ekran-orgusu.html
+++ b/belgeler/ekran-orgusu.html
@@ -9,8 +9,8 @@ title: Ekran Örgüsü
     <h2>Ekran Terimleri</h2>
     <p>Günümüzdeki ekran grupları saat, telefon, tablet, dizüstü, masaüstü, tv, dev ekranlar olarak isimlendirilirler. Deveb bu ekranları temsil eden 8 adet ekran terimi kullanır.</p>
     <h3>Terimler</h3>
-    <p>Türkçe: Genel - Minik - Ufak - Küçük - Orta - Büyük - Kocaman - Dev</p>
-    <p>English: General - Mini - Extra Small - Small - Medium - Large - Extra Large - Huge</p>
+    <p data-metin="ana">Türkçe: Genel - Minik - Ufak - Küçük - Orta - Büyük - Kocaman - Dev</p>
+    <p data-metin="ana">English: General - Mini - Extra Small - Small - Medium - Large - Extra Large - Huge</p>
 
     <h2>Ekranları Kapsama Yönleri</h2>
     <p>Deveb ekranları kapsama yönlerine göre kullanım sağlamaktadır. Yani büyük ekranlardan küçük ekranlara doğru, küçük ekranlardan büyük ekranlara doğru ve sadece belirtilen ekranlar olarak üç farklı yöntemle kullanabilirsiniz. Deveb'in bazı özelliklerinde varsayılan ekran kapsama yönü küçük ekrandandan büyük ekrana doğrudur. Bunun dışında olan durumlarda ise ekranları kapsama yönünü belirtmeniz gerekmektedir.</p>
@@ -18,6 +18,6 @@ title: Ekran Örgüsü
     <p>Az önce belirttiğimiz gibi bazı özelliklerinde varsayılan yön küçükten büyüğe doğru demiştik. Kap örgüsü mesela buna bir örnektir. Ve sadece bu şekilde kullanılması dışında bir özelliğe sahip değildir. Kap örgüsünden bir alıntı yapalım isterseniz.</p>
     <p>Örneğin dizüstü ekranlardan başlayarak daha büyük ekranlarda bir alanın yarısı kadar alan parçası kullanmak istiyorsak şöyle yazabiliriz; data-ort="1 2p". Daha küçük olan ekranlar ne olacak diye soruyor gibisiniz... Tanımlama yapmadıysanız büyük ihtimal doğal (auto) genişliğe sahip olacaktır.</p>
     <p>Diğer durumlarda ise ekran yönlerini belirtmek için şöyle kullanımlara baş vururuz;</p>
-    <p>Türkçe: öncesiyle-?, öncesini-?, ?, sonrasıyla-?, sonrasını-?</p>
-    <p>English: ?-with-before, ?-before, ?, ?-with-after, ?-after</p>
+    <p data-metin="ana">Türkçe: öncesiyle-?, öncesini-?, ?, sonrasıyla-?, sonrasını-?</p>
+    <p data-metin="ana">English: ?-with-before, ?-before, ?, ?-with-after, ?-after</p>
 </div>
