--- a/belgeler/ekran-orgusu.html
+++ b/belgeler/ekran-orgusu.html
@@ -10,7 +10,10 @@ title: Ekran Örgüsü
     <p>Günümüzdeki ekran grupları saat, telefon, tablet, dizüstü, masaüstü, tv, dev ekranlar olarak isimlendirilirler. Deveb bu ekranları temsil eden 8 adet ekran terimi kullanır.</p>
     <h3>Terimler</h3>
     <p data-metin="ana">Türkçe: Genel - Minik - Ufak - Küçük - Orta - Büyük - Kocaman - Dev</p>
+    <p data-metin="ana">Kullanımı: data-gnl - data-mnk - data-ufk - data-kçk - data-ort - data-byk - data-kcm - data-dev</p>
     <p data-metin="ana">English: General - Mini - Extra Small - Small - Medium - Large - Extra Large - Huge</p>
+    <p data-metin="ana">Use: data-gnl - data-mn - data-xs - data-sm - data-md - data-lg - data-xl - data-hg</p>
+    <p>Terimlerden anlaşılacağı üzere genel :|: general tüm ekranları kapsar. Diğerleri ise sırasıyla saat, telefon, tablet, dizüstü, masaüstü, tv, dev ekranları kapsar.</p>
 
     <h2>Ekranları Kapsama Yönleri</h2>
     <p>Deveb ekranları kapsama yönlerine göre kullanım sağlamaktadır. Yani büyük ekranlardan küçük ekranlara doğru, küçük ekranlardan büyük ekranlara doğru ve sadece belirtilen ekranlar olarak üç farklı yöntemle kullanabilirsiniz. Deveb'in bazı özelliklerinde varsayılan ekran kapsama yönü küçük ekrandandan büyük ekrana doğrudur. Bunun dışında olan durumlarda ise ekranları kapsama yönünü belirtmeniz gerekmektedir.</p>
@@ -20,4 +23,15 @@ title: Ekran Örgüsü
     <p>Diğer durumlarda ise ekran yönlerini belirtmek için şöyle kullanımlara baş vururuz;</p>
     <p data-metin="ana">Türkçe: öncesiyle-?, öncesini-?, ?, sonrasıyla-?, sonrasını-?</p>
     <p data-metin="ana">English: ?-with-before, ?-before, ?, ?-with-after, ?-after</p>
+    <h3>öncesiyle-? | ?-with-before</h3>
+    <p>Belirtildiği ekran dahil kendisinden küçük ekranları kapsar</p>
+    <h3>öncesini-? | ?-before</h3>
+    <p>Belirtildiği ekrandan küçük ekranları kapsar</p>
+    <h3>? | ?</h3>
+    <p>Belirtildiği ekranları kapsar</p>
+    <h3>sonrasını-? | ?-after</h3>
+    <p>Belirtildiği ekrandan büyük ekranları kapsar</p>
+    <h3>sonrasıyla-? | ?-with-after</h3>
+    <p>Belirtildiği ekran dahil kendisinden büyük ekranları kapsar</p>
+
 </div>
