--- a/belgeler/ekran-orgusu.html
+++ b/belgeler/ekran-orgusu.html
@@ -24,14 +24,14 @@ title: Ekran Örgüsü
     <p data-metin="ana">Türkçe: öncesiyle-?, öncesini-?, ?, sonrasıyla-?, sonrasını-?</p>
     <p data-metin="ana">English: ?-with-before, ?-before, ?, ?-with-after, ?-after</p>
     <h3>öncesiyle-? | ?-with-before</h3>
-    <p>Belirtildiği ekran dahil kendisinden küçük ekranları kapsar</p>
+    <p>Belirtildiği ekran dahil kendisinden küçük ekranları kapsar. Örnek: data-ort="öncesiyle-gizle" (english: data-md="hide-with-before")</p>
     <h3>öncesini-? | ?-before</h3>
-    <p>Belirtildiği ekrandan küçük ekranları kapsar</p>
+    <p>Belirtildiği ekrandan küçük ekranları kapsar. Örnek: data-ort="öncesini-gizle" (english: data-md="hide-before")</p>
     <h3>? | ?</h3>
-    <p>Belirtildiği ekranları kapsar</p>
+    <p>Belirtildiği ekranları kapsar. Örnek: data-ort="gizle" (english: data-md="hide")</p>
     <h3>sonrasını-? | ?-after</h3>
-    <p>Belirtildiği ekrandan büyük ekranları kapsar</p>
+    <p>Belirtildiği ekrandan büyük ekranları kapsar. Örnek: data-ort="sonrasını-gizle" (english: data-md="hide-with-after")</p>
     <h3>sonrasıyla-? | ?-with-after</h3>
-    <p>Belirtildiği ekran dahil kendisinden büyük ekranları kapsar</p>
+    <p>Belirtildiği ekran dahil kendisinden büyük ekranları kapsar. Örnek: data-ort="sonrasıyla-gizle" (english: data-md="hide-with-after")</p>
 
 </div>
