--- a/belgeler/ekran-orgusu.html
+++ b/belgeler/ekran-orgusu.html
@@ -21,17 +21,17 @@ title: Ekran Örgüsü
     <p>Az önce belirttiğimiz gibi bazı özelliklerinde varsayılan yön küçükten büyüğe doğru demiştik. Kap örgüsü mesela buna bir örnektir. Ve sadece bu şekilde kullanılması dışında bir özelliğe sahip değildir. Kap örgüsünden bir alıntı yapalım isterseniz.</p>
     <p>Örneğin dizüstü ekranlardan başlayarak daha büyük ekranlarda bir alanın yarısı kadar alan parçası kullanmak istiyorsak şöyle yazabiliriz; data-ort="1 2p". Daha küçük olan ekranlar ne olacak diye soruyor gibisiniz... Tanımlama yapmadıysanız büyük ihtimal doğal (auto) genişliğe sahip olacaktır.</p>
     <p>Diğer durumlarda ise ekran yönlerini belirtmek için şöyle kullanımlara baş vururuz;</p>
-    <p data-metin="ana">Türkçe: öncesiyle-?, öncesini-?, ?, sonrasıyla-?, sonrasını-?</p>
+    <p data-metin="ana">Türkçe: küçükleriyle-?, küçükleri-?, ?, büyükleriyle-?, büyükleri-?</p>
     <p data-metin="ana">English: ?-with-before, ?-before, ?, ?-with-after, ?-after</p>
-    <h3>öncesiyle-? | ?-with-before</h3>
-    <p>Belirtildiği ekran dahil kendisinden küçük ekranları kapsar. Örnek: data-ort="öncesiyle-gizle" (english: data-md="hide-with-before")</p>
-    <h3>öncesini-? | ?-before</h3>
-    <p>Belirtildiği ekrandan küçük ekranları kapsar. Örnek: data-ort="öncesini-gizle" (english: data-md="hide-before")</p>
+    <h3>küçükleriyle-? | ?-with-before</h3>
+    <p>Belirtildiği ekran dahil kendisinden küçük ekranları kapsar. Örnek: data-ort="küçükleriyle-gizle" (english: data-md="hide-with-before")</p>
+    <h3>küçükleri-? | ?-before</h3>
+    <p>Belirtildiği ekrandan küçük ekranları kapsar. Örnek: data-ort="küçükleri-gizle" (english: data-md="hide-before")</p>
     <h3>? | ?</h3>
     <p>Belirtildiği ekranları kapsar. Örnek: data-ort="gizle" (english: data-md="hide")</p>
-    <h3>sonrasını-? | ?-after</h3>
-    <p>Belirtildiği ekrandan büyük ekranları kapsar. Örnek: data-ort="sonrasını-gizle" (english: data-md="hide-with-after")</p>
-    <h3>sonrasıyla-? | ?-with-after</h3>
-    <p>Belirtildiği ekran dahil kendisinden büyük ekranları kapsar. Örnek: data-ort="sonrasıyla-gizle" (english: data-md="hide-with-after")</p>
+    <h3>büyükleri-? | ?-after</h3>
+    <p>Belirtildiği ekrandan büyük ekranları kapsar. Örnek: data-ort="büyükleri-gizle" (english: data-md="hide-with-after")</p>
+    <h3>büyükleriyle-? | ?-with-after</h3>
+    <p>Belirtildiği ekran dahil kendisinden büyük ekranları kapsar. Örnek: data-ort="büyükleriyle-gizle" (english: data-md="hide-with-after")</p>
 
 </div>
