--- a/belgeler/ekran-orgusu.html
+++ b/belgeler/ekran-orgusu.html
@@ -22,16 +22,16 @@ title: Ekran Örgüsü
     <p>Örneğin dizüstü ekranlardan başlayarak daha büyük ekranlarda bir alanın yarısı kadar alan parçası kullanmak istiyorsak şöyle yazabiliriz; data-ort="1 2p". Daha küçük olan ekranlar ne olacak diye soruyor gibisiniz... Tanımlama yapmadıysanız büyük ihtimal doğal (auto) genişliğe sahip olacaktır.</p>
     <p>Diğer durumlarda ise ekran yönlerini belirtmek için şöyle kullanımlara baş vururuz;</p>
     <p data-metin="ana">Türkçe: küçükleriyle-?, küçükleri-?, ?, büyükleriyle-?, büyükleri-?</p>
-    <p data-metin="ana">English: ?-with-before, ?-before, ?, ?-with-after, ?-after</p>
-    <h3>küçükleriyle-? | ?-with-before</h3>
-    <p>Belirtildiği ekran dahil kendisinden küçük ekranları kapsar. Örnek: data-ort="küçükleriyle-gizle" (english: data-md="hide-with-before")</p>
-    <h3>küçükleri-? | ?-before</h3>
-    <p>Belirtildiği ekrandan küçük ekranları kapsar. Örnek: data-ort="küçükleri-gizle" (english: data-md="hide-before")</p>
+    <p data-metin="ana">English: ?-with-smaller, ?-smaller, ?, ?-with-bigger, ?-bigger</p>
+    <h3>küçükleriyle-? | ?-with-smaller</h3>
+    <p>Belirtildiği ekran dahil kendisinden küçük ekranları kapsar. Örnek: data-ort="küçükleriyle-gizle" (english: data-md="hide-with-smaller")</p>
+    <h3>küçükleri-? | ?-smaller</h3>
+    <p>Belirtildiği ekrandan küçük ekranları kapsar. Örnek: data-ort="küçükleri-gizle" (english: data-md="hide-smaller")</p>
     <h3>? | ?</h3>
     <p>Belirtildiği ekranları kapsar. Örnek: data-ort="gizle" (english: data-md="hide")</p>
-    <h3>büyükleri-? | ?-after</h3>
-    <p>Belirtildiği ekrandan büyük ekranları kapsar. Örnek: data-ort="büyükleri-gizle" (english: data-md="hide-with-after")</p>
-    <h3>büyükleriyle-? | ?-with-after</h3>
-    <p>Belirtildiği ekran dahil kendisinden büyük ekranları kapsar. Örnek: data-ort="büyükleriyle-gizle" (english: data-md="hide-with-after")</p>
+    <h3>büyükleri-? | ?-bigger</h3>
+    <p>Belirtildiği ekrandan büyük ekranları kapsar. Örnek: data-ort="büyükleri-gizle" (english: data-md="hide-with-bigger")</p>
+    <h3>büyükleriyle-? | ?-with-bigger</h3>
+    <p>Belirtildiği ekran dahil kendisinden büyük ekranları kapsar. Örnek: data-ort="büyükleriyle-gizle" (english: data-md="hide-with-bigger")</p>
 
 </div>
