--- a/belgeler/ekran-orgusu.html
+++ b/belgeler/ekran-orgusu.html
@@ -6,6 +6,65 @@ title: Ekran Örgüsü
     <h1>Ekran Örgüsü</h1>
     <p>Günümüzde ekran ölçeklerinin çeşitliliği bizi ekranlara uyumlu şekilde çalışmalar yapmaya zorlamaktadır. Önyüz çatılarında (frontend framework) bunları genel olarak sağlıklı şekilde kullanabilirsiniz. Bildiğiniz üzere alışılmış ekran ölçeklerini kapsayan terimler genelde 5 6 tanedir. Deveb'de bu birazcık daha fazladır.</p>
 
+    <table class="tablo" data-gnl="1 1p">
+      <thead>
+        <tr>
+          <th>Ekranlar</th>
+          <th>
+            Genel <br>
+            <i class="fa fa-minus-square-o" aria-hidden="true"></i>
+            <i class="fa fa-mobile" aria-hidden="true"></i>
+            <i class="fa fa-tablet" aria-hidden="true"></i>
+            <i class="fa fa-laptop" aria-hidden="true"></i>
+            <i class="fa fa-desktop" aria-hidden="true"></i>
+            <i class="fa fa-television" aria-hidden="true"></i>
+            <br><span data-metin="olumlu">saat + telefon + tablet + dizüstü + masaüstü + dev</span>
+          </th>
+          <th>
+            Ufak <br>
+            <i class="fa fa-mobile" aria-hidden="true"></i>
+            <i class="fa fa-tablet" aria-hidden="true"></i>
+            <i class="fa fa-laptop" aria-hidden="true"></i>
+            <i class="fa fa-desktop" aria-hidden="true"></i>
+            <i class="fa fa-television" aria-hidden="true"></i>
+            <br><span data-metin="olumlu">telefon + tablet + dizüstü + masaüstü + dev</span>
+          </th>
+          <th>
+            Orta <br>
+            <i class="fa fa-laptop" aria-hidden="true"></i>
+            <i class="fa fa-desktop" aria-hidden="true"></i>
+            <br><span data-metin="olumlu">dizüstü ve daha büyük</span>
+          </th>
+          <th>
+            Büyük <br>
+            <i class="fa fa-desktop" aria-hidden="true"></i>
+            <br><span data-metin="olumlu">büyük ekranlar</span>
+          </th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th>Sınıf önekleri</th>
+          <td>data-gnl</td>
+          <td>data-ufk</td>
+          <td>data-ort</td>
+          <td>data-byk</td>
+        </tr>
+        <tr>
+          <th>Oran Ölçekleri</th>
+          <td colspan="8">0 ~ 24 oranlarında ölçekleme (hazırlanıyor)</td>
+        </tr>
+        <tr>
+          <th>Bölme Ölçekleri</th>
+          <td colspan="8">1 ~ 24 parçaya eşit genişlikte ölçekleme</td>
+        </tr>
+        <tr>
+          <th>Parça Ölçekleri</th>
+          <td colspan="8">1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24 parça boyu olmak üzere 24 farklı ölçekleme</td>
+        </tr>
+      </tbody>
+    </table>
+
     <h2>Ekran Terimleri</h2>
     <p>Günümüzdeki ekran grupları saat, telefon, tablet, dizüstü, masaüstü, tv, dev ekranlar olarak isimlendirilirler. Deveb bu ekranları temsil eden 8 adet ekran terimi kullanır.</p>
     <h3>Terimler</h3>
