--- a/belgeler/ekran-orgusu.html
+++ b/belgeler/ekran-orgusu.html
@@ -21,24 +21,39 @@ title: Ekran Örgüsü
             <br><span data-metin="olumlu">saat + telefon + tablet + dizüstü + masaüstü + dev</span>
           </th>
           <th>
+            Minik <br>
+            <i class="fa fa-minus-square-o" aria-hidden="true"></i>
+            <br><span data-metin="olumlu">saat</span>
+          </th>
+          <th>
             Ufak <br>
             <i class="fa fa-mobile" aria-hidden="true"></i>
+            <br><span data-metin="olumlu">telefon</span>
+          </th>
+          <th>
+            Tablet <br>
             <i class="fa fa-tablet" aria-hidden="true"></i>
-            <i class="fa fa-laptop" aria-hidden="true"></i>
-            <i class="fa fa-desktop" aria-hidden="true"></i>
-            <i class="fa fa-television" aria-hidden="true"></i>
-            <br><span data-metin="olumlu">telefon + tablet + dizüstü + masaüstü + dev</span>
+            <br><span data-metin="olumlu">telefon</span>
           </th>
           <th>
             Orta <br>
             <i class="fa fa-laptop" aria-hidden="true"></i>
-            <i class="fa fa-desktop" aria-hidden="true"></i>
-            <br><span data-metin="olumlu">dizüstü ve daha büyük</span>
+            <br><span data-metin="olumlu">dizüstü</span>
           </th>
           <th>
             Büyük <br>
             <i class="fa fa-desktop" aria-hidden="true"></i>
-            <br><span data-metin="olumlu">büyük ekranlar</span>
+            <br><span data-metin="olumlu">Masaüstü</span>
+          </th>
+          <th>
+            Kocaman <br>
+            <i class="fa fa-mobile" aria-hidden="true"></i>
+            <br><span data-metin="olumlu">TV ve benzeri</span>
+          </th>
+          <th>
+            Dev <br>
+            <i class="fa fa-mobile" aria-hidden="true"></i>
+            <br><span data-metin="olumlu">Dev ekranlar</span>
           </th>
         </tr>
       </thead>
