--- a/belgeler/ekran-orgusu.html
+++ b/belgeler/ekran-orgusu.html
@@ -47,12 +47,12 @@ title: Ekran Örgüsü
           </th>
           <th>
             Kocaman <br>
-            <i class="fa fa-mobile" aria-hidden="true"></i>
+            <i class="fa fa-television" aria-hidden="true"></i>
             <br><span data-metin="olumlu">TV ve benzeri</span>
           </th>
           <th>
             Dev <br>
-            <i class="fa fa-mobile" aria-hidden="true"></i>
+            <i class="fa fa-window-maximize" aria-hidden="true"></i>
             <br><span data-metin="olumlu">Dev ekranlar</span>
           </th>
         </tr>
