--- a/belgeler/ekran-orgusu.html
+++ b/belgeler/ekran-orgusu.html
@@ -18,42 +18,42 @@ title: Ekran Örgüsü
             <i class="fa fa-laptop" aria-hidden="true"></i>
             <i class="fa fa-desktop" aria-hidden="true"></i>
             <i class="fa fa-television" aria-hidden="true"></i>
-            <br><span data-metin="olumlu">saat + telefon + tablet + dizüstü + masaüstü + dev</span>
+            <br><span data-metin="olumlu ince">saat + telefon + tablet + dizüstü + masaüstü + dev</span>
           </th>
           <th>
             Minik <br>
             <i class="fa fa-minus-square-o" aria-hidden="true"></i>
-            <br><span data-metin="olumlu">saat</span>
+            <br><span data-metin="olumlu ince">saat</span>
           </th>
           <th>
             Ufak <br>
             <i class="fa fa-mobile" aria-hidden="true"></i>
-            <br><span data-metin="olumlu">telefon</span>
+            <br><span data-metin="olumlu ince">telefon</span>
           </th>
           <th>
             Tablet <br>
             <i class="fa fa-tablet" aria-hidden="true"></i>
-            <br><span data-metin="olumlu">telefon</span>
+            <br><span data-metin="olumlu ince">telefon</span>
           </th>
           <th>
             Orta <br>
             <i class="fa fa-laptop" aria-hidden="true"></i>
-            <br><span data-metin="olumlu">dizüstü</span>
+            <br><span data-metin="olumlu ince">dizüstü</span>
           </th>
           <th>
             Büyük <br>
             <i class="fa fa-desktop" aria-hidden="true"></i>
-            <br><span data-metin="olumlu">Masaüstü</span>
+            <br><span data-metin="olumlu ince">Masaüstü</span>
           </th>
           <th>
             Kocaman <br>
             <i class="fa fa-television" aria-hidden="true"></i>
-            <br><span data-metin="olumlu">TV ve benzeri</span>
+            <br><span data-metin="olumlu ince">TV ve benzeri</span>
           </th>
           <th>
             Dev <br>
             <i class="fa fa-window-maximize" aria-hidden="true"></i>
-            <br><span data-metin="olumlu">Dev ekranlar</span>
+            <br><span data-metin="olumlu ince">Dev ekranlar</span>
           </th>
         </tr>
       </thead>
