--- a/belgeler/ekran-orgusu.html
+++ b/belgeler/ekran-orgusu.html
@@ -18,7 +18,7 @@ title: Ekran Örgüsü
             <i class="fa fa-laptop" aria-hidden="true"></i>
             <i class="fa fa-desktop" aria-hidden="true"></i>
             <i class="fa fa-television" aria-hidden="true"></i>
-            <br><span data-metin="olumlu ince">saat + telefon + tablet + dizüstü + masaüstü + dev</span>
+            <br><span data-metin="olumlu ince">saat + ••• + dev</span>
           </th>
           <th>
             Minik <br>
