--- a/belgeler/ekran-orgusu.html
+++ b/belgeler/ekran-orgusu.html
@@ -48,12 +48,12 @@ title: Ekran Örgüsü
           <th>
             Kocaman <br>
             <i class="fa fa-television" aria-hidden="true"></i>
-            <br><span data-metin="olumlu ince">TV ve benzeri</span>
+            <br><span data-metin="olumlu ince">Televizyon</span>
           </th>
           <th>
             Dev <br>
             <i class="fa fa-window-maximize" aria-hidden="true"></i>
-            <br><span data-metin="olumlu ince">Dev ekranlar</span>
+            <br><span data-metin="olumlu ince">Dev ekran</span>
           </th>
         </tr>
       </thead>
