--- a/belgeler/ekran-orgusu.html
+++ b/belgeler/ekran-orgusu.html
@@ -59,11 +59,26 @@ title: Ekran Örgüsü
       </thead>
       <tbody>
         <tr>
+          <th>Ekran Değerleri</th>
+          <td>0 » ∞</td>
+          <td>0 » 300px</td>
+          <td>300px » 576px</td>
+          <td>576px » 768px</td>
+          <td>768px » 992px</td>
+          <td>992px » 1200px</td>
+          <td>1200px » 1900px</td>
+          <td>1900px » ∞</td>
+        </tr>
+        <tr>
           <th>Sınıf önekleri</th>
           <td>data-gnl</td>
+          <td>data-mnk</td>
           <td>data-ufk</td>
+          <td>data-kçk</td>
           <td>data-ort</td>
           <td>data-byk</td>
+          <td>data-kcm</td>
+          <td>data-dev</td>
         </tr>
         <tr>
           <th>Oran Ölçekleri</th>
