--- a/belgeler/ekran-orgusu.html
+++ b/belgeler/ekran-orgusu.html
@@ -31,7 +31,7 @@ title: Ekran Örgüsü
             <br><span data-metin="olumlu ince">telefon</span>
           </th>
           <th>
-            Tablet <br>
+            Küçük <br>
             <i class="fa fa-tablet" aria-hidden="true"></i>
             <br><span data-metin="olumlu ince">telefon</span>
           </th>
