--- a/belgeler/ekran-orgusu.html
+++ b/belgeler/ekran-orgusu.html
@@ -59,7 +59,7 @@ title: Ekran Örgüsü
       </thead>
       <tbody>
         <tr>
-          <th>Ekran Değerleri</th>
+          <th>Değerler</th>
           <td>0 » ∞</td>
           <td>0 » 300px</td>
           <td>300px » 576px</td>
@@ -70,7 +70,7 @@ title: Ekran Örgüsü
           <td>1900px » ∞</td>
         </tr>
         <tr>
-          <th>Sınıf önekleri</th>
+          <th>Birimleri</th>
           <td>data-gnl</td>
           <td>data-mnk</td>
           <td>data-ufk</td>
