--- a/belgeler/ekran-orgusu.html
+++ b/belgeler/ekran-orgusu.html
@@ -6,6 +6,9 @@ title: Ekran Örgüsü
     <h1>Ekran Örgüsü</h1>
     <p>Günümüzde ekran ölçeklerinin çeşitliliği bizi ekranlara uyumlu şekilde çalışmalar yapmaya zorlamaktadır. Önyüz çatılarında (frontend framework) bunları genel olarak sağlıklı şekilde kullanabilirsiniz. Bildiğiniz üzere alışılmış ekran ölçeklerini kapsayan terimler genelde 5 6 tanedir. Deveb'de bu birazcık daha fazladır.</p>
 
+    <h2>Ekran Terimleri</h2>
+    <p>Günümüzdeki ekran grupları saat, telefon, tablet, dizüstü, masaüstü, tv, dev ekranlar olarak isimlendirilirler. Deveb bu ekranları temsil eden 8 adet ekran terimi kullanır.</p>
+
     <table class="tablo" data-gnl="1 1p">
       <thead>
         <tr>
@@ -82,22 +85,15 @@ title: Ekran Örgüsü
           <td>data-dev</td>
         </tr>
         <tr>
-          <th>Oran Ölçekleri</th>
-          <td colspan="8">0 ~ 24 oranlarında ölçekleme (hazırlanıyor)</td>
-        </tr>
-        <tr>
-          <th>Bölme Ölçekleri</th>
-          <td colspan="8">1 ~ 24 parçaya eşit genişlikte ölçekleme</td>
-        </tr>
-        <tr>
-          <th>Parça Ölçekleri</th>
-          <td colspan="8">1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24 parça boyu olmak üzere 24 farklı ölçekleme</td>
+          <th>Yön Belirtme</th>
+          <td>?</td>
+          <td>?<br>büyükleriyle-?<br>büyükleri-?</td>
+          <td colspan="5">küçükleri-?<br>küçükleriyle-?<br>?<br>büyükleriyle-?<br>büyükleri-?</td>
+          <td>küçükleri-?<br>küçükleriyle-?<br>?</td>
         </tr>
       </tbody>
     </table>
 
-    <h2>Ekran Terimleri</h2>
-    <p>Günümüzdeki ekran grupları saat, telefon, tablet, dizüstü, masaüstü, tv, dev ekranlar olarak isimlendirilirler. Deveb bu ekranları temsil eden 8 adet ekran terimi kullanır.</p>
     <h3>Terimler</h3>
     <p data-metin="ana">Türkçe: Genel - Minik - Ufak - Küçük - Orta - Büyük - Kocaman - Dev</p>
     <p data-metin="ana">Kullanımı: data-gnl - data-mnk - data-ufk - data-kçk - data-ort - data-byk - data-kcm - data-dev</p>
