--- a/belgeler/ekran-orgusu.html
+++ b/belgeler/ekran-orgusu.html
@@ -86,10 +86,10 @@ title: Ekran Örgüsü
         </tr>
         <tr>
           <th>Yön Belirtme</th>
-          <td>?</td>
-          <td>?<br>büyükleriyle-?<br>büyükleri-?</td>
-          <td colspan="5">küçükleri-?<br>küçükleriyle-?<br>?<br>büyükleriyle-?<br>büyükleri-?</td>
-          <td>küçükleri-?<br>küçükleriyle-?<br>?</td>
+          <td><span data-metin="ana gri">sınıf</span></td>
+          <td><span data-metin="ana gri">sınıf</span><br>büyükleriyle-<span data-metin="ana gri">sınıf</span><br>büyükleri-<span data-metin="ana gri">sınıf</span></td>
+          <td colspan="5">küçükleri-<span data-metin="ana gri">sınıf</span><br>küçükleriyle-<span data-metin="ana gri">sınıf</span><br><span data-metin="ana gri">sınıf</span><br>büyükleriyle-<span data-metin="ana gri">sınıf</span><br>büyükleri-<span data-metin="ana gri">sınıf</span></td>
+          <td>küçükleri-<span data-metin="ana gri">sınıf</span><br>küçükleriyle-<span data-metin="ana gri">sınıf</span><br><span data-metin="ana gri">sınıf</span></td>
         </tr>
       </tbody>
     </table>
