--- a/belgeler/ekran-orgusu.html
+++ b/belgeler/ekran-orgusu.html
@@ -9,7 +9,7 @@ title: Ekran Örgüsü
     <h2>Ekran Terimleri</h2>
     <p>Günümüzdeki ekran grupları saat, telefon, tablet, dizüstü, masaüstü, tv, dev ekranlar olarak isimlendirilirler. Deveb bu ekranları temsil eden 8 adet ekran terimi kullanır.</p>
 
-    <table class="tablo" data-gnl="1 1p">
+    <table class="tablo">
       <thead>
         <tr>
           <th>Ekranlar</th>
