--- a/belgeler/ekran-orgusu.html
+++ b/belgeler/ekran-orgusu.html
@@ -37,7 +37,7 @@ title: Ekran Örgüsü
           <th>
             Küçük <br>
             <i class="fa fa-tablet" aria-hidden="true"></i>
-            <br><span data-metin="olumlu ince">telefon</span>
+            <br><span data-metin="olumlu ince">tablet</span>
           </th>
           <th>
             Orta <br>
