--- a/belgeler/ekran-orgusu.html
+++ b/belgeler/ekran-orgusu.html
@@ -63,7 +63,7 @@ title: Ekran Örgüsü
       </thead>
       <tbody>
         <tr>
-          <th>Değerler</th>
+          <th>Ölçekler</th>
           <td>0 »</td>
           <td>» 300px</td>
           <td>300px »</td>
